2008-09-25  Ross Burton  <ross@linux.intel.com>

	* appearance/mb-appearance.c:
	Name the matchbox theme column more appropriately.

2007-11-14  Ross Burton  <ross@openedhand.com>

	* appearance/mb-appearance.desktop:
	Remove Encoding key, rename SingleInstance to X-MB-SingleInstance.

2007-07-20  Ross Burton  <ross@openedhand.com>

	* appearance/mb-appearance.c:
	Add a check box for whether the user is left or right handed,
	which sets the GtkScrolledWindowPosition key.

2007-06-20  Ross Burton  <ross@openedhand.com>

	* appearance/mb-appearance.c:
	Set the window icon.

2007-06-19  Ross Burton  <ross@openedhand.com>

	* appearance/mb-appearance.c:
	Total rewrite!  Now uses metathemes, just installing random themes
	won' t work.

2007-05-20  Ross Burton  <ross@openedhand.com>

	* configure.ac:
	* appearance/Makefile.am:
	Remove glade check.

	* appearance/appearance.glade:
	* appearance/appearance.gladep:
	Remove.

	* appearance/mb-appearance.c:
	Manually construct the UI instead of using glade.

2007-04-10  Ross Burton  <ross@openedhand.com>

	* appearance/appearance.glade:
	Make the window wider.

2005-10-14  Ross Burton  <ross@openedhand.com>

	* appearance/mb-appearance.c:
	Write to Poky keys.

2005-10-04  Ross Burton  <ross@openedhand.com>

	* appearance/mb-appearance.desktop:
	Use right binary name.

2005-10-04  mallum  <mallum@openedhand.com>

	* appearance/Makefile.am:
	Rename binary to matchbox-appearence
	* autogen.sh:
	Add this

2005-10-04  Ross Burton  <ross@openedhand.com>

	* appearance/Makefile.am:
	* appearance/mb-appearance.desktop:
	Add .desktop file.

2005-10-04  Ross Burton  <ross@openedhand.com>

	* appearance/:
	Add simple tool to set the font and theme GConf keys.

