@@ -1,6 +1,11 @@
 2008-09-25  Ross Burton  <ross@linux.intel.com>
 
 	* appearance/mb-appearance.c:
+	Handle Metacity themes too.
+
+2008-09-25  Ross Burton  <ross@linux.intel.com>
+
+	* appearance/mb-appearance.c:
 	Name the matchbox theme column more appropriately.
 
 2007-11-14  Ross Burton  <ross@openedhand.com>
